--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,8 @@
   --second-background-color: #f5f4fa;
   --footer-text-color: #ffffff;
   --main-logo-color: #afb1b8;
+  --main-color-hover: #2196f390;
+  --main-animation: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -19,6 +21,10 @@ body {
 
   background-color: #ffffff;
   color: var(--main-text-color);
+}
+
+button {
+  user-select: none;
 }
 
 img {
@@ -34,6 +40,27 @@ img {
   box-sizing: border-box;
 }
 
+/*Animations*/
+
+@keyframes hover-shadow-out {
+  from {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+  to {
+    box-shadow: none;
+  }
+}
+
+@keyframes hover-shadow-in {
+  from {
+    box-shadow: none;
+  }
+  to {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
+}
 /*global*/
 
 .link {
@@ -87,14 +114,17 @@ img {
 
   padding: 0;
 }
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .web-logo {
   color: var(--main-color);
 }
+
 .logo {
   font-family: "Raleway";
   font-weight: 700;
@@ -111,12 +141,15 @@ img {
   align-items: center;
   margin-right: auto;
 }
+
 .navigation {
   display: flex;
 }
+
 .navigation-list {
   margin-right: 50px;
 }
+
 .navigation-list:last-child {
   margin-right: 0px;
 }
@@ -132,17 +165,38 @@ img {
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
 .current {
   color: var(--main-color);
+}
+
+.navigation-link.current::after {
+  position: relative;
+  bottom: -32px;
+  left: 0;
+
+  width: 100%;
+  height: 4px;
+
+  content: "";
+
+  display: flex;
+
+  background-color: var(--main-color);
+  border-radius: 2px;
 }
 
 .navigation-link:hover,
 .navigation-link:focus,
 .cont-link:hover,
 .cont-link:focus,
-.navigation-link:active {
+.navigation-link:active,
+.contact-link:hover,
+.contact-link:focus {
   color: var(--main-color);
+  transition: color 250ms var(--main-animation);
 }
+
 .contacts-header {
   font-weight: 500;
   line-height: 1.14;
@@ -173,17 +227,6 @@ img {
 
 .contacts-header-li:first-child {
   margin-left: 0px;
-}
-
-.contact-link:hover,
-.contact-link:focus {
-  color: var(--main-color);
-}
-.contact-link:active {
-  color: var(--main-color);
-}
-.contact-link:visited {
-  color: var(--main-text-color);
 }
 
 /*Main index*/
@@ -225,6 +268,7 @@ img {
   line-height: 1.87;
 
   /*Button size*/
+
   border-radius: 4px;
   cursor: pointer;
   margin-top: 30px;
@@ -234,12 +278,79 @@ img {
 .head-button:hover,
 .head-button:focus {
   background-color: var(--hover-color);
+  transition: background-color 250ms var(--main-animation);
 }
 
 .head-button:active {
   background-color: var(--main-color);
 }
 
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+
+  z-index: 1;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #00000020;
+
+  transition: opacity 250ms var(--main-animation),
+    visibility 250ms var(--main-animation);
+}
+
+.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.3);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  z-index: 1;
+
+  padding: 8px;
+  border-radius: 4px;
+
+  min-width: 528px;
+  min-height: 581px;
+
+  background-color: #ffffff;
+
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  transition: transform 250ms var(--main-animation);
+}
+
+.close-modal {
+  position: absolute;
+  right: 8px;
+  top: 8px;
+
+  padding: 6px;
+
+  border: #00000010 solid 1px;
+  border-radius: 50%;
+
+  cursor: pointer;
+}
+
+.svg-close {
+  width: 18px;
+  height: 18px;
+
+  display: flex;
+}
 /*About*/
 
 .about-ul {
@@ -306,6 +417,26 @@ img {
   justify-content: space-between;
 }
 
+.work-thumb {
+  position: relative;
+}
+
+.work-description {
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+
+  width: 100%;
+  background-color: #2f303a80;
+  color: var(--hero-color);
+
+  padding: 27px 0;
+
+  position: absolute;
+  bottom: 0;
+  margin: 0;
+}
 /*team*/
 
 .team-background {
@@ -370,12 +501,18 @@ img {
   display: flex;
   align-items: center;
   padding: 12px;
+
+  transition: background-color 250ms var(--main-animation),
+    color 250ms var(--main-animation);
 }
 
 .social-link:hover,
 .social-link:focus {
   background-color: var(--main-color);
   color: var(--hero-color);
+
+  transition: color 250ms var(--main-animation),
+    background-color 250ms var(--main-animation);
 }
 
 .portfolio-social-logo {
@@ -404,6 +541,9 @@ img {
 
   border-radius: 4px;
   border: var(--main-logo-color) solid 1px;
+
+  transition: color 250ms var(--main-animation),
+    border 250ms var(--main-animation);
 
   cursor: pointer;
 }
@@ -446,6 +586,11 @@ img {
   border-radius: 4px;
   padding: 6px 22px;
 
+  animation-name: hover-shadow-out;
+  animation-duration: 250ms;
+  animation-timing-function: var(--main-animation);
+  animation-fill-mode: forwards;
+
   cursor: pointer;
 }
 
@@ -454,8 +599,13 @@ img {
   background-color: var(--hover-color);
   color: #ffffff;
 
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
+  animation-name: hover-shadow-in;
+  animation-duration: 250ms;
+  animation-timing-function: var(--main-animation);
+  animation-fill-mode: forwards;
+
+  transition: background-color 250ms var(--main-animation),
+    color 250ms var(--main-animation);
 }
 
 .active-filter {
@@ -487,12 +637,46 @@ img {
 .portfolio-link {
   display: inline-block;
   cursor: pointer;
+
+  animation-name: hover-shadow-out;
+  animation-duration: 250ms;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-fill-mode: forwards;
 }
 
 .portfolio-link:hover,
 .portfolio-link:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  animation-name: hover-shadow-in;
+  animation-duration: 250ms;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  animation-fill-mode: forwards;
+}
+
+.portfolio-img-thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-hover-text {
+  font-size: 18px;
+  line-height: 1.56;
+
+  color: #ffffff;
+  background-color: var(--main-color-hover);
+
+  padding: 63px 24px;
+  margin: 0;
+
+  position: absolute;
+  top: 0;
+
+  transform: translateY(100%);
+  transition: transform 250ms ease;
+}
+
+.portfolio-link:hover .portfolio-hover-text,
+.portfolio-link:focus .portfolio-hover-text {
+  transform: translateY(0);
 }
 
 .portfolio-cont {
@@ -529,7 +713,7 @@ img {
 
 .footer-container {
   display: flex;
-  align-items: center;
+  align-items: baseline;
 }
 
 .logo-footer {
@@ -538,6 +722,10 @@ img {
   line-height: 1.19;
 
   color: var(--footer-text-color);
+}
+
+.contacts-footer {
+  margin-top: 20px;
 }
 
 .cont-adress {
@@ -595,6 +783,8 @@ img {
 
   padding: 12px 12px;
   border-radius: 50%;
+
+  transition: background-color 250ms var(--main-animation);
 }
 
 .footer-social-bg:hover,
