--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 :root {
+  /*colors*/
   --main-text-color: #212121;
   --main-color: #2196f3;
   --logo-second-color: #000000;
@@ -11,6 +12,9 @@
   --footer-text-color: #ffffff;
   --main-logo-color: #afb1b8;
   --main-color-hover: #2196f390;
+  --svg-icon-color: #ffffff;
+
+  /*animation*/
   --main-animation: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -42,25 +46,6 @@ img {
 
 /*Animations*/
 
-@keyframes hover-shadow-out {
-  from {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-  to {
-    box-shadow: none;
-  }
-}
-
-@keyframes hover-shadow-in {
-  from {
-    box-shadow: none;
-  }
-  to {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
-  }
-}
 /*global*/
 
 .link {
@@ -164,6 +149,8 @@ img {
 
   padding-top: 32px;
   padding-bottom: 32px;
+
+  transition: color 250ms var(--main-animation);
 }
 
 .current {
@@ -209,7 +196,10 @@ img {
   color: var(--second-color);
   display: flex;
   fill: currentColor;
+
+  transition: color 250ms var(--main-animation);
 }
+
 .contact-mail-svg {
   width: 16px;
   height: 16px;
@@ -266,6 +256,8 @@ img {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
+
+  transition: background-color 250ms var(--main-animation);
 
   /*Button size*/
 
@@ -324,7 +316,7 @@ img {
   min-width: 528px;
   min-height: 581px;
 
-  background-color: #ffffff;
+  background-color: var(--second-background-color);
 
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -341,6 +333,8 @@ img {
 
   border: #00000010 solid 1px;
   border-radius: 50%;
+
+  background-color: transparent;
 
   cursor: pointer;
 }
@@ -494,7 +488,7 @@ img {
 
 .social-link {
   background-color: var(--hero-color);
-  color: #afb1b8;
+  color: var(--main-logo-color);
 
   border-radius: 50%;
 
@@ -586,10 +580,8 @@ img {
   border-radius: 4px;
   padding: 6px 22px;
 
-  animation-name: hover-shadow-out;
-  animation-duration: 250ms;
-  animation-timing-function: var(--main-animation);
-  animation-fill-mode: forwards;
+  transition: background-color 250ms var(--main-animation),
+    color 250ms var(--main-animation), box-shadow 250ms var(--main-animation);
 
   cursor: pointer;
 }
@@ -597,20 +589,21 @@ img {
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--hover-color);
-  color: #ffffff;
+  color: var(--hero-color);
 
-  animation-name: hover-shadow-in;
-  animation-duration: 250ms;
-  animation-timing-function: var(--main-animation);
-  animation-fill-mode: forwards;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 
   transition: background-color 250ms var(--main-animation),
-    color 250ms var(--main-animation);
+    color 250ms var(--main-animation), box-shadow 250ms var(--main-animation);
 }
 
 .active-filter {
   background-color: var(--main-color);
-  color: #ffffff;
+  color: var(--hero-color);
+
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 /*Portfolio list*/
@@ -638,18 +631,14 @@ img {
   display: inline-block;
   cursor: pointer;
 
-  animation-name: hover-shadow-out;
-  animation-duration: 250ms;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-fill-mode: forwards;
+  transition: box-shadow 250ms var(--main-animation);
 }
 
 .portfolio-link:hover,
 .portfolio-link:focus {
-  animation-name: hover-shadow-in;
-  animation-duration: 250ms;
-  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  animation-fill-mode: forwards;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  transition: box-shadow 250ms var(--main-animation);
 }
 
 .portfolio-img-thumb {
@@ -661,7 +650,7 @@ img {
   font-size: 18px;
   line-height: 1.56;
 
-  color: #ffffff;
+  color: var(--hero-color);
   background-color: var(--main-color-hover);
 
   padding: 63px 24px;
@@ -671,7 +660,7 @@ img {
   top: 0;
 
   transform: translateY(100%);
-  transition: transform 250ms ease;
+  transition: transform 250ms var(--main-animation);
 }
 
 .portfolio-link:hover .portfolio-hover-text,
@@ -750,6 +739,8 @@ img {
   line-height: 1.71;
 
   color: var(--footer-mail-tel-color);
+
+  transition: color 250ms var(--main-animation);
 }
 
 /*Social network links*/
@@ -796,5 +787,5 @@ img {
   width: 20px;
   height: 20px;
 
-  fill: #ffffff;
+  fill: var(--svg-icon-color);
 }
